# cmake-hospital-management

HospitalManagementSystem/: CMakeLists.txt  HospitalManagementSystem.cpp  HospitalManagementSystem.h
HospitalManagementSystem/include/: Doctor.h  Hospital.h  Patient.h
HospitalManagementSystem/src/: Doctor.cpp  Hospital.cpp  Patient.cpp  main.cpp
